--- a/Paliturka/templates/new_book.html
+++ b/Paliturka/templates/new_book.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+{% load bootstrap %}
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-
+{{ form|bootstrap }}
 </body>
 </html>
