--- a/Paliturka/templates/new_book.html
+++ b/Paliturka/templates/new_book.html
@@ -1,3 +1,4 @@
+{% extends 'base_empty.html' %}
 {% load bootstrap %}
 <html>
 <head lang="en">
@@ -5,6 +6,14 @@
     <title></title>
 </head>
 <body>
-{{ form|bootstrap }}
+{% block content %}
+<div class="form-group col-xs-6 col-sm-3 " ng-app="Book" >
+<form name="{{ form.form_name }}" novalidate>
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" class="btn" ng-disabled="{{ form.form_name }}.$invalid" value="Submit">
+</form>
+</div>
+{% endblock %}
 </body>
 </html>
